--- a/sd/xiaomi_hack/config.cfg
+++ b/sd/xiaomi_hack/config.cfg
@@ -23,3 +23,11 @@ XIAOMI_HACK_LANGUAGE=FR
 # NO  : don't log custom language access
 
 XIAOMI_HACK_LANGUAGE_TRACES=YES
+
+### Timezone
+# Example timezones, see more at http://svn.fonosfera.org/fon-ng/trunk/luci/modules/admin-fon/root/etc/timezones.db
+#   -Europe/London GMT0BST,M3.5.0/1,M10.5.0
+#   -Europe/Paris CET-1CEST,M3.5.0,M10.5.0/3
+#   -US/Central CST6CDT,M3.2.0,M11.1.0
+
+XIAOMI_HACK_TIMEZONE=CET-1CEST,M3.5.0,M10.5.0/3
